--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,14 @@
 html,
-body {
-  min-width: 1122px;
+body { 
   margin: 0;
-  padding: 0;
+  min-width: 960px;
+  font-weight: 700;
   font-size: 14px;
-  line-height: 24px;  
-  font-weight: bold;
-  font-family: "PTSans Narrow", "Arial", sans-serif;
-  color: #000000;
-  text-transform: uppercase;  
-  background-color: #282828
+  line-height: 24px;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
+  color: #ffffff;
+  text-transform: uppercase;
+  background: #000000 url("../img/main-background-cut.jpg") no-repeat center top;  
 }
 
 
@@ -33,15 +32,14 @@ h2 {
 }
 
 .main-navigation a, .main-navigation-active, .login {
-  font-size: 16px;
-  color: #ffffff;
+  font-size: 16px;  
 }
 
 
 /* Общие стили сетки */
 
 .clearfix::after {
-  content: "";
+  content: '';
   display: table;
   clear: both;
 }
@@ -52,46 +50,180 @@ h2 {
   padding: 0 10px;
 }
 
-.index-content,
 .item-container,
-.price-container
+.price-container,
+.shop-container
 {
   background: #ffffff url(../img/content-whitenoise-background-101px.jpg)
+}
+
+.breadcrumbs {  
+  margin-bottom: 60px;  
+}
+
+.breadcrumbs ul {
+  padding: 0;
+}
+
+.breadcrumbs li {
+  position: relative;
+  display: inline-block;
+  margin-right: 40px;  
+}
+
+.breadcrumbs li:not(:first-child)::before {
+  content: '';
+  position: absolute;
+  top: 8px;
+  left: -25px;
+  display: block;
+  width: 7px;
+  height: 7px;  
+  background-color: #000000;
+  transform: rotate(45deg);
+}
+
+.breadcrumbs li:last-child {
+  color: #aba9a7;
+}
+
+.breadcrumbs a {
+  color: #000000;
+  text-decoration: none;  
 }
 
 
 /* Стили хэдера */
 
 .main-header {  
+  color: #ffffff;
   background-color: #000000;
 }
 
 .main-navigation {
   float: left;
-  width: 780px;
-  min-height: 70px;
+  width: 780px;  
+}
+
+.main-navigation ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  font-size: 0;
+}
+
+.main-navigation li {
+  display: inline-block;  
+  font-size: 16px;
+  line-height: 20px;
+  vertical-align: top;
+}
+
+.main-navigation a {
+  display: block;
+  padding: 25px 20px;  
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.main-navigation a:hover {
+  background: #242424;
 }
 
 .user-block {
   float: right;
-  width: 140px;
-  min-height: 70px;
+  width: 140px;  
+}
+
+.login {
+  position: relative;  
+  display: inline-block;
+  padding: 25px 20px;
+  padding-left: 50px;  
+  font-size: 16px;
+  line-height: 20px;
+  vertical-align: top;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.login:hover {
+  background-color: #242424;
+}
+
+.login::before {
+  content: '';
+  position: absolute;
+  top: 28px;
+  left: 20px;
+  width: 18px;
+  height: 18px;
+  background: transparent url("../img/spritesheet.png") no-repeat;
+  background-position: -15px -119px;
+  opacity: 0.3;
+}
+
+.login:hover::before {
+  opacity: 1;
 }
 
 .index-logo {
   width: 368px;
-  min-height: 204px;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 60px;
+  height: 204px;
+  margin: 0 auto;
   margin-bottom: 25px;
+}
+
+.index-logo img {
+  width: 368px;
+  height: 204px;
+}
+
+.header-item-page,
+.header-shop-page,
+.header-price-page
+{
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.header-item-page .container,
+.header-shop-page .container,
+.header-price-page .container
+{
+  width: 975px;
+  margin-left: 117px
+}
+
+.to-main-page {  
+  width: 111px;
+  height: 20px;  
+}
+
+.main-navigation-active {  
+  position: relative;
+  padding: 25px 20px;  
+}
+
+.main-navigation-active:hover {
+  background: #242424;
+}
+
+.main-navigation-active::after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 57px;
+  height: 4px;
+  bottom: 0;
+  background-color: #ffffff;
 }
 
 
 /* Стили мейна */
 
-main {
-  background-color: #070707;  
+.index-logo {
+  margin-top: 60px;
 }
 
 .features {
@@ -100,88 +232,396 @@ main {
 
 .features-item {
   float: left;
-  width: 300px;
-  min-height: 175px;
+  width: 300px;  
   margin-right: 20px;
-  color: #ffffff;
+  text-align: center;
 }
 
 .features-item:last-child {
   margin-right: 0;
 }
 
+.features-name {
+  position: relative;
+  display: block;
+  margin-bottom: 30px;
+  padding-bottom: 35px;
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.features-item p {
+  margin: 10px;
+  margin-bottom: 0;
+}
+
+.features-name::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  display: block;
+  width: 20px;
+  height: 20px;
+  margin-left: -10px;
+  background-color: #ffffff;
+  transform: rotate(45deg);
+}
+
 .index-content {
-  margin-bottom: 65px;;
+  margin-bottom: 65px;
   padding: 50px 80px;
+  color: #000000;
+  background: url("../img/content-separator.png") no-repeat center,
+  #f8f5f2 url("../img/content-whitenoise-background-101px.jpg");
 }
 
 .index-content-left {
   float: left;
-  width: 380px;
-  min-height: 330px;
+  width: 380px;  
 }
 
 .index-content-right {
   float: right;
-  width: 300px;
-  min-height: 330px;
+  width: 300px;  
+}
+
+.index-content-title {
+  margin: 0;
+  margin-bottom: 25px;  
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.index-content p {
+  margin: 0;
+  margin-bottom: 25px;
+}
+
+.news-preview {
+  margin: 0;
+  padding: 0;
+  padding-right: 35px;
+  list-style: none;
+}
+
+.news-preview li {
+  margin-bottom: 25px;
+}
+
+.news-preview p {
+  margin-bottom: 0;
+}
+
+.news-preview time {
+  text-transform: none;
+}
+
+.btn {
+  display: inline-block;
+  margin-right: 16px;
+  padding: 10px 33px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
+  vertical-align: top;
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+  text-decoration: none;  
+  background-color: #000000;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.btn:hover,
+.btn:active {
+  background-color: #663d15;
+}
+
+.btn.disabled,
+.btn:disabled {
+  cursor: default;
+  opacity: 0.5;
+}
+
+.btn.disabled:hover,
+.btn:disabled:hover {
+  background-color: #000000;
+}
+
+.gallery {
+  position: relative;
+  height: 260px;
+}
+
+.gallery-content {
+  height: 164px;
+  margin: 0;
+  background-color: #cccccc;
+  border: 7px solid #ffffff;
+}
+
+.gallery-content img {
+  width: 286px;
+  height: 164px;
+}
+
+.gallery .btn {
+  position: absolute;
+  bottom: 0;
+  width: 140px;
+  margin: 0;
+}
+
+.gallery-prev {
+  left: 0;
+}
+
+.gallery-next {
+  right: 0;
+}
+
+.appointment-form input {
+  float: left;
+  width: 106px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  padding: 7px 15px;
+  font-size: 14px;
+  line-height: 24px;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
+  color: #000000;
+  text-transform: uppercase;  
+  background-color: #f9f6f3;
+  border: 2px solid #000000;
+  outline: none;
+}
+
+.appointment-form input:focus {
+  border: 2px solid #663d15;
+}
+
+.appointment-form input:nth-child(2n) {
+  margin-right: 0;
+}
+
+.appointment-form .btn {
+  clear: both;
+  width: 100%;
 }
 
 
-/* Стил футера */
+/* Стили футера */
 
-.main-footer {
+.main-footer {  
   padding-top: 60px;
   padding-bottom: 40px;
-  color: #ffffff;
-  background-image: url(../img/footer-graynoise-background-100px.jpg)
+  color: #ffffff; /* лучше явно прописать везде для футера */
+  background: #252525 url("../img/footer-graynoise-background-100px.jpg");  
 }
 
 .footer-contacts {
   float: left;
   width: 320px;
-  margin-right: 60px;
-  min-height: 90px;
+  margin-right: 60px; 
+}
+
+.footer-contacts a {
+  color: #ffffff;
+}
+
+.footer-contacts a:hover {
+  text-decoration: none;
 }
 
 .footer-social {
   float: left;
   width: 180px;
-  min-height: 90px;
+  text-align: center;
 }
 
 .footer-copyright {
-  float: right;
-  width: 180px;
-  min-height: 90px;
+  float: right;  
+  max-width: 180px;
+}
+
+.footer-social p {
+  margin: 0;
+  margin-bottom: 15px;
+}
+
+.social-btn {
+  display: inline-block;
+  width: 43px;
+  height: 43px;
+  margin: 0 2px;
+  font-size: 0;
+  vertical-align: top;
+  text-decoration: none;
+  background: #000000 url("../img/spritesheet.png") no-repeat center;
+}
+
+.social-btn:hover {
+  background-color: #ffffff;
+}
+
+.social-btn-vk {
+  background-position: -6px -254px;
+}
+
+.social-btn-fb {
+  background-position: 0px -6px;
+}
+
+.social-btn-inst {
+  background-position: -4px -155px;
+}
+
+.social-btn-vk:hover {
+  background-position: -6px -300px;
+}
+
+.social-btn-fb:hover {
+  background-position: 0px -58px;
+}
+
+.social-btn-inst:hover {
+  background-position: -4px -206px;
+}
+
+.footer-copyright p {
+  margin: 0;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.footer-copyright .btn {
+  margin-right: 0;
+}
+
+.footer-copyright .btn:hover {
+  color: #000000;
+  background-color: #ffffff;
+}
+
+.item-footer,
+.shop-footer,
+.price-footer
+{
+  padding-top: 0;
+}
+
+.shadow-footer {
+  width: 1200px;
+  margin: 0 auto;
+  padding-top: 60px;
+  box-shadow: inset 0 40px 40px -30px #000000;
 }
 
 
 /* Дополнительные стили barbershop-item */
 
 .item-container { 
-  width: 950px;
+  box-sizing: border-box;
+  max-width: 1200px;
   margin: 0 auto;  
-  padding: 55px 130px 48px 120px;
+  padding: 40px 130px 30px 120px;
+  color: #000000;  
 }
 
-.breadcrumbs {
-  margin-bottom: 60px;
+.item-header {
+  margin-left: 10px; 
+}
+
+figure {
+  margin: 0;  
 }
 
 .item-img {
   display: block;
-  float: left;
-  width: 460px;
-  min-height: 670px;
-  margin: 0 90px 0 0;  
+  float: left;  
+  min-height: 670px;  
+  margin-top: -19px;
   text-align: center;
   border: 0;
 }
 
+.item-img-small {
+  margin-left: -5px;
+  margin-top: -12px;
+}
+
+.item-img-link {
+  text-decoration: none;  
+}
+
 .buy-menu {  
-  float: right; /* Задать отступы внутри блока после подключения шрифтов */
-  width: 390px;
+  float: right;
+  max-width: 390px;
+  margin-top: 12px;
+  
+}
+
+.vendor-code {
+  float: right;
+  color: #aeaeae;  
+}
+
+.buy-menu p {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.item-price {
+  display: inline-block; 
+  width: 109px;
+  padding: 10px 0;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
+  vertical-align: top;
+  text-align: center;
+  color: #000000;
+  text-transform: uppercase;  
+  background-color: #e5e5e5;
+  border: none;
+  outline: none;  
+}
+
+.btn-buy {
+  padding-left: 19px;
+  padding-right: 19px;
+}
+
+.buy-menu h2 {
+  margin-top: 65px;
+  margin-bottom: 30px;
+}
+
+ul {
+  padding: 0
+}
+
+.equipment li {
+  position: relative;
+  padding-left: 22px;
+  list-style: none;
+}
+
+.equipment li::before {
+  content: '';
+  position: absolute;
+  top: 8px;
+  left: 3px;
+  display: block;
+  width: 8px;
+  height: 8px;  
+  background-color: #000000;
+  transform: rotate(45deg);
 }
 
 
@@ -191,19 +631,118 @@ main {
   width: 960px;
   margin: 0 auto;  
   padding: 55px 120px 50px;
+  color: #000000;
   background: #ffffff url(../img/content-whitenoise-background-101px.jpg);
+}
+
+.shop-header {
+  margin-left: 10px;
+}
+
+.shop-header h1 {
+  margin-top: 0;
+  line-height: 30px;
 }
 
 .producers-form {
   float: left;
   width: 220px;
   min-height: 590px;
+  margin-left: 10px;
   margin-right: 10px;
+  margin-top: -10px;
+}
+
+.producers-form h2 {
+  margin-top: 0;
+  margin-bottom: 31px;
+}
+
+.producers-form h2:nth-of-type(2) {
+  margin-top: 53px;
+}
+
+input[type="checkbox"],
+input[type="radio"]
+{
+  display: none;
+}
+
+input[type="checkbox"] + label,
+input[type="radio"] + label
+{
+  position: relative;
+  display: block;
+  max-width: 170px;
+  margin-bottom: 20px;  
+  padding-left: 43px;
+  line-height: 18px;
+  cursor: pointer;  
+}
+
+input[type="checkbox"] + label::before,
+input[type="radio"] + label::before
+{
+  content: '';
+  position: absolute;  
+  left: 0; top: -2px;
+  display: block;
+  width: 20px;
+  height: 20px;  
+  background: url(../img/input-spritesheet.png) no-repeat;
+}
+
+input[type="checkbox"] + label::before {
+  background-position: -5px -35px;
+}
+
+input[type="checkbox"]:checked + label::before {
+  background-position: -5px -5px;
+}
+
+input[type="radio"] + label::before {
+  background-position: -5px -185px;
+}
+
+input[type="radio"]:checked + label::before {
+  background-position: -5px -215px;
+}
+
+.producers-form label:hover {
+  color: #663d15;
+}
+
+input[type="checkbox"]:disabled + label,
+input[type="radio"]:disabled + label
+{
+  color: rgba(0, 0, 0, 0.3);
+}
+
+input[type="checkbox"]:disabled + label::before {
+  background-position: -5px -65px;
+}
+
+input[type="checkbox"]:checked:disabled + label::before {
+  background-position: -5px -95px;
+}
+
+input[type="radio"]:disabled + label::before {
+  background-position: -5px -155px;
+}
+
+input[type="radio"]:checked:disabled + label::before {
+  background-position: -5px -125px;
+}
+
+.btn-show {
+  margin-top: 30px;
+  padding-right: 28px;
 }
 
 .items-list {
   float: right;
   width: 720px;
+  margin-top: -16px;
   font-size: 0px;
 }
 
@@ -214,48 +753,166 @@ main {
   min-height: 286px;
   margin: 10px;
   font-size: 14px;
+  line-height: 18px;
+  text-transform: none;  
   background-color: #ffffff;
+  box-shadow: 0 0 20px -5px #000000;
+}
+
+.item a:nth-child(2) {
+  display: block;
+  margin-bottom: 14px;
+  padding-left: 16px;
+  color: #000000;
+  text-decoration: none;
+}
+
+.item span {
+  text-transform: uppercase;  
+}
+
+.items-list .item-price {  
+  margin-left: 16px;  
+}
+
+.items-list .btn-buy {
+  padding-right: 17px;
 }
 
 .paginator {
   float: left;
   height: 43px;
-  margin-top: 45px;
-  margin-left: 10px;  
+  width: 700px;
+  margin-top: 35px;
+  margin-left: 9px;
+  border: 0;
+  outline: 0;
 }
 
 .paginator li {
   display: inline-block;
-  width: 43px;
-  height: 43px;
-  margin-right: 7px;
+  width: 43px;  
+  margin-right: 7px;  
+  padding-right: 0;
   font-size: 14px;
+  text-align: center;
   background-color: #000000;
 }
 
-.paginator li:first-of-type {
-  margin-left: -43px;
+.paginator a {
+  width: 43px;
+  margin-right: 0;
+  padding-left: 0;
+  padding-right: 0;  
 }
 
+.paginator .btn-page-active {  
+  color: #000000;
+  background-color: #ffffff;
+}
 
 /* Дополнительные стили barbershop-price */
+
+.header-price-page .main-navigation-active::after {
+  width: 77px;  
+}
 
 .price-container { 
   width: 960px;
   margin: 0 auto;  
-  padding: 55px 120px 68px;  
+  padding: 35px 120px 55px; 
+  color: #000000;
+}
+
+.price-header {
+  margin-left: 10px;  
+}
+
+.price-header h1 {
+  line-height: 30px;
 }
 
 .price-title {
-  text-align: center;
-  margin-bottom: 60px;
+  position: relative;
+  margin-top: -20px;
+  margin-left: 10px;
+  margin-bottom: 28px;  
+  line-height: 62px;
+  text-align: center;  
+}
+
+.price-title::before,
+.price-title::after 
+{
+  content: '';
+  position: absolute;
+  top: 31px;
+  display: block;
+  width: 160px;
+  height: 2px;  
+  background-color: #000000;  
+}
+
+.price-title::after {
+  right: 0;
 }
 
 .price-features {
   width: 460px;
-  padding: 10px;
+  padding: 10px;  
 }
 
+.price-features h2 {
+  line-height: 28px;
+  margin-bottom: 28px
+}
+
+.price-features li {
+  position: relative;
+  margin-bottom: 14px;
+  padding-left: 22px;
+  list-style: none;
+}
+
+.price-features li::before {
+  content: '';
+  position: absolute;
+  top: 8px;
+  left: 1px;
+  display: block;
+  width: 8px;
+  height: 8px;  
+  background-color: #000000;
+  transform: rotate(45deg);
+}
+
+.price-features li:last-child {
+  margin-bottom: 0;
+}
+
+.price-features .service-prices-table {
+  margin-top: 35px;
+}
+
+.service-prices-table td {
+  box-sizing: border-box;
+  width: 231px;
+  height: 43px;
+  border: 2px solid #000000;
+}
+
+.service-prices-table td:nth-of-type(odd) {
+  padding-left: 17px;
+}
+
+.service-prices-table td:nth-of-type(even) {
+  text-align: center;
+}
+
+.price-features p {
+  max-width: 390px;
+}
+ 
 .price-features:nth-of-type(even) {
   float: left;
 }
@@ -265,10 +922,9 @@ main {
 }
 
 .price-features:nth-of-type(-n+3) {
-  min-height: 215px;
-  margin-bottom: 55px;
+  min-height: 260px; 
 }
 
 .price-features:last-of-type {
-  padding-top: 59px; /* Уточнить отступ после подключения шрифтов */
+  padding-top: 72px;
 }
