--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html,
-body { 
+body {
   margin: 0;
   min-width: 960px;
   font-weight: 700;
@@ -19,7 +19,7 @@ h1, .index-content-title {
 }
 
 h2 {
-  font-size: 24px;  
+  font-size: 24px;
 }
 
 .price-title {
@@ -28,11 +28,11 @@ h2 {
 
 .features-name {
   font-size: 30px;
-  color: #f7f4f1; 
+  color: #f7f4f1;
 }
 
 .main-navigation a, .main-navigation-active, .login {
-  font-size: 16px;  
+  font-size: 16px;
 }
 
 
@@ -57,8 +57,8 @@ h2 {
   background: #ffffff url(../img/content-whitenoise-background-101px.jpg)
 }
 
-.breadcrumbs {  
-  margin-bottom: 60px;  
+.breadcrumbs {
+  margin-bottom: 60px;
 }
 
 .breadcrumbs ul {
@@ -68,7 +68,7 @@ h2 {
 .breadcrumbs li {
   position: relative;
   display: inline-block;
-  margin-right: 40px;  
+  margin-right: 40px;
 }
 
 .breadcrumbs li:not(:first-child)::before {
@@ -78,7 +78,7 @@ h2 {
   left: -25px;
   display: block;
   width: 7px;
-  height: 7px;  
+  height: 7px;
   background-color: #000000;
   transform: rotate(45deg);
 }
@@ -89,20 +89,20 @@ h2 {
 
 .breadcrumbs a {
   color: #000000;
-  text-decoration: none;  
+  text-decoration: none;
 }
 
 
 /* Стили хэдера */
 
-.main-header {  
+.main-header {
   color: #ffffff;
   background-color: #000000;
 }
 
 .main-navigation {
   float: left;
-  width: 780px;  
+  width: 780px;
 }
 
 .main-navigation ul {
@@ -113,7 +113,7 @@ h2 {
 }
 
 .main-navigation li {
-  display: inline-block;  
+  display: inline-block;
   font-size: 16px;
   line-height: 20px;
   vertical-align: top;
@@ -121,7 +121,7 @@ h2 {
 
 .main-navigation a {
   display: block;
-  padding: 25px 20px;  
+  padding: 25px 20px;
   color: #ffffff;
   text-decoration: none;
 }
@@ -132,14 +132,14 @@ h2 {
 
 .user-block {
   float: right;
-  width: 140px;  
+  width: 140px;
 }
 
 .login {
-  position: relative;  
+  position: relative;
   display: inline-block;
   padding: 25px 20px;
-  padding-left: 50px;  
+  padding-left: 50px;
   font-size: 16px;
   line-height: 20px;
   vertical-align: top;
@@ -195,14 +195,14 @@ h2 {
   margin-left: 117px
 }
 
-.to-main-page {  
+.to-main-page {
   width: 111px;
-  height: 20px;  
+  height: 20px;
 }
 
-.main-navigation-active {  
+.main-navigation-active {
   position: relative;
-  padding: 25px 20px;  
+  padding: 25px 20px;
 }
 
 .main-navigation-active:hover {
@@ -232,7 +232,7 @@ h2 {
 
 .features-item {
   float: left;
-  width: 300px;  
+  width: 300px;
   margin-right: 20px;
   text-align: center;
 }
@@ -278,17 +278,17 @@ h2 {
 
 .index-content-left {
   float: left;
-  width: 380px;  
+  width: 380px;
 }
 
 .index-content-right {
   float: right;
-  width: 300px;  
+  width: 300px;
 }
 
 .index-content-title {
   margin: 0;
-  margin-bottom: 25px;  
+  margin-bottom: 25px;
   font-size: 30px;
   line-height: 42px;
 }
@@ -329,7 +329,7 @@ h2 {
   text-align: center;
   color: #ffffff;
   text-transform: uppercase;
-  text-decoration: none;  
+  text-decoration: none;
   background-color: #000000;
   border: none;
   outline: none;
@@ -394,7 +394,7 @@ h2 {
   line-height: 24px;
   font-family: "PT Sans Narrow", "Arial", sans-serif;
   color: #000000;
-  text-transform: uppercase;  
+  text-transform: uppercase;
   background-color: #f9f6f3;
   border: 2px solid #000000;
   outline: none;
@@ -416,7 +416,7 @@ h2 {
 
 /* Стили футера */
 
-.main-footer {  
+.main-footer {
   padding-top: 60px;
   padding-bottom: 40px;
   color: #ffffff; /* лучше явно прописать везде для футера */
@@ -426,7 +426,7 @@ h2 {
 .footer-contacts {
   float: left;
   width: 320px;
-  margin-right: 60px; 
+  margin-right: 60px;
 }
 
 .footer-contacts a {
@@ -444,7 +444,7 @@ h2 {
 }
 
 .footer-copyright {
-  float: right;  
+  float: right;
   max-width: 180px;
 }
 
@@ -524,50 +524,57 @@ h2 {
 
 /* Дополнительные стили barbershop-item */
 
-.item-container { 
+.item-container {
   box-sizing: border-box;
   max-width: 1200px;
-  margin: 0 auto;  
+  margin: 0 auto;
   padding: 40px 130px 30px 120px;
-  color: #000000;  
+  color: #000000;
 }
 
 .item-header {
-  margin-left: 10px; 
+  margin-left: 10px;
 }
 
 figure {
-  margin: 0;  
+  margin: 0 0 12px 0;
 }
 
 .item-img {
   display: block;
-  float: left;  
-  min-height: 670px;  
-  margin-top: -19px;
+  float: left;
+  margin-top: -7px;
   text-align: center;
   border: 0;
 }
 
-.item-img-small {
-  margin-left: -5px;
-  margin-top: -12px;
+.item-img-large,
+.item-img-small
+{
+  box-shadow: 0 0 20px -5px #000000;
+}
+
+.item-img-large {
+  margin-bottom: 13px;
+}
+
+.item-img-link:not(:last-child) {
+  margin-right: 17px;
 }
 
 .item-img-link {
-  text-decoration: none;  
+  text-decoration: none;
 }
 
-.buy-menu {  
+.buy-menu {
   float: right;
   max-width: 390px;
   margin-top: 12px;
-  
 }
 
 .vendor-code {
   float: right;
-  color: #aeaeae;  
+  color: #aeaeae;
 }
 
 .buy-menu p {
@@ -576,7 +583,7 @@ figure {
 }
 
 .item-price {
-  display: inline-block; 
+  display: inline-block;
   width: 109px;
   padding: 10px 0;
   font-weight: 700;
@@ -586,10 +593,10 @@ figure {
   vertical-align: top;
   text-align: center;
   color: #000000;
-  text-transform: uppercase;  
+  text-transform: uppercase;
   background-color: #e5e5e5;
   border: none;
-  outline: none;  
+  outline: none;
 }
 
 .btn-buy {
@@ -619,7 +626,7 @@ ul {
   left: 3px;
   display: block;
   width: 8px;
-  height: 8px;  
+  height: 8px;
   background-color: #000000;
   transform: rotate(45deg);
 }
@@ -627,9 +634,9 @@ ul {
 
 /* Дополнительные стили barbershop-shop */
 
-.shop-container { 
+.shop-container {
   width: 960px;
-  margin: 0 auto;  
+  margin: 0 auto;
   padding: 55px 120px 50px;
   color: #000000;
   background: #ffffff url(../img/content-whitenoise-background-101px.jpg);
@@ -674,21 +681,21 @@ input[type="radio"] + label
   position: relative;
   display: block;
   max-width: 170px;
-  margin-bottom: 20px;  
+  margin-bottom: 20px;
   padding-left: 43px;
   line-height: 18px;
-  cursor: pointer;  
+  cursor: pointer;
 }
 
 input[type="checkbox"] + label::before,
 input[type="radio"] + label::before
 {
   content: '';
-  position: absolute;  
+  position: absolute;
   left: 0; top: -2px;
   display: block;
   width: 20px;
-  height: 20px;  
+  height: 20px;
   background: url(../img/input-spritesheet.png) no-repeat;
 }
 
@@ -754,7 +761,7 @@ input[type="radio"]:checked:disabled + label::before {
   margin: 10px;
   font-size: 14px;
   line-height: 18px;
-  text-transform: none;  
+  text-transform: none;
   background-color: #ffffff;
   box-shadow: 0 0 20px -5px #000000;
 }
@@ -768,11 +775,11 @@ input[type="radio"]:checked:disabled + label::before {
 }
 
 .item span {
-  text-transform: uppercase;  
+  text-transform: uppercase;
 }
 
-.items-list .item-price {  
-  margin-left: 16px;  
+.items-list .item-price {
+  margin-left: 16px;
 }
 
 .items-list .btn-buy {
@@ -791,8 +798,8 @@ input[type="radio"]:checked:disabled + label::before {
 
 .paginator li {
   display: inline-block;
-  width: 43px;  
-  margin-right: 7px;  
+  width: 43px;
+  margin-right: 7px;
   padding-right: 0;
   font-size: 14px;
   text-align: center;
@@ -803,10 +810,10 @@ input[type="radio"]:checked:disabled + label::before {
   width: 43px;
   margin-right: 0;
   padding-left: 0;
-  padding-right: 0;  
+  padding-right: 0;
 }
 
-.paginator .btn-page-active {  
+.paginator .btn-page-active {
   color: #000000;
   background-color: #ffffff;
 }
@@ -814,18 +821,18 @@ input[type="radio"]:checked:disabled + label::before {
 /* Дополнительные стили barbershop-price */
 
 .header-price-page .main-navigation-active::after {
-  width: 77px;  
+  width: 77px;
 }
 
-.price-container { 
+.price-container {
   width: 960px;
-  margin: 0 auto;  
-  padding: 35px 120px 55px; 
+  margin: 0 auto;
+  padding: 35px 120px 55px;
   color: #000000;
 }
 
 .price-header {
-  margin-left: 10px;  
+  margin-left: 10px;
 }
 
 .price-header h1 {
@@ -836,21 +843,21 @@ input[type="radio"]:checked:disabled + label::before {
   position: relative;
   margin-top: -20px;
   margin-left: 10px;
-  margin-bottom: 28px;  
+  margin-bottom: 28px;
   line-height: 62px;
-  text-align: center;  
+  text-align: center;
 }
 
 .price-title::before,
-.price-title::after 
+.price-title::after
 {
   content: '';
   position: absolute;
   top: 31px;
   display: block;
   width: 160px;
-  height: 2px;  
-  background-color: #000000;  
+  height: 2px;
+  background-color: #000000;
 }
 
 .price-title::after {
@@ -859,7 +866,7 @@ input[type="radio"]:checked:disabled + label::before {
 
 .price-features {
   width: 460px;
-  padding: 10px;  
+  padding: 10px;
 }
 
 .price-features h2 {
@@ -881,7 +888,7 @@ input[type="radio"]:checked:disabled + label::before {
   left: 1px;
   display: block;
   width: 8px;
-  height: 8px;  
+  height: 8px;
   background-color: #000000;
   transform: rotate(45deg);
 }
@@ -922,7 +929,7 @@ input[type="radio"]:checked:disabled + label::before {
 }
 
 .price-features:nth-of-type(-n+3) {
-  min-height: 260px; 
+  min-height: 260px;
 }
 
 .price-features:last-of-type {
