--- a/css/style.css
+++ b/css/style.css
@@ -997,6 +997,7 @@ input[type="radio"]:checked:disabled + label::before {
   height: 561px;
   margin-top: -280px;
   margin-left: -390px;
+  text-transform: none;
   background: #e9e5dc url("../img/map.png");
   border: 7px solid white;
   box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
